--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "mongo": "^0.1.0",
     "mongoose": "^7.0.0",
     "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.9.2",
     "nodemon": "^2.0.21",
     "passport": "^0.6.0",
     "passport-facebook": "^3.0.0",
